--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>Hello world!</h1>
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="Nguyễn Duy Trường" email='truongezgg@gmail.com'>
+    <link rel="stylesheet" href="css/reset.css"><!-- Reset CSS -->
+    <link rel="stylesheet" href="css/setting.css"><!-- Setting -->
+    <link rel="stylesheet" href="css/main.css"><!-- Style -->
+    <title>Document</title>
+</head>
+<body>
+    <h1>HELLO WORLD</h1>
+</body>
+</html>
