--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Nguyễn Duy Trường" email='truongezgg@gmail.com'>
-    <link rel="stylesheet" href="css/reset.css"><!-- Reset CSS -->
-    <link rel="stylesheet" href="css/setting.css"><!-- Setting -->
-    <link rel="stylesheet" href="css/main.css"><!-- Style -->
+    <link rel="stylesheet" href="CSS/reset.css"><!-- Reset CSS -->
+    <link rel="stylesheet" href="CSS/setting.css"><!-- Setting -->
+    <link rel="stylesheet" href="CSS/main.css"><!-- Style -->
     <title>Document</title>
 </head>
 <body>
