--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="CSS/reset.css"><!-- Reset CSS -->
     <link rel="stylesheet" href="CSS/setting.css"><!-- Setting -->
     <link rel="stylesheet" href="CSS/main.css"><!-- Style -->
-    <title>Document</title>
+    <title>Truongezgg comming soon</title>
 </head>
 <body>
-    <h1>HELLO WORLD</h1>
+    <h1>Comming soon...</h1>
 </body>
 </html>
