--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
 </head>
 <body>
     <h1>Comming soon...</h1>
+    <script>
+        alert('Page comming soon!');
+    </script>
 </body>
 </html>
