--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="content">
                 <aside class="header__menu">
                     <ul class="menu">
-                        <li id="js-toggle-menu" class="menu-item">
+                        <li id="js-toggle-menu" title='show/hide' class="menu-item">
                             <i class="icon-menu"></i>
                             <!-- <span class="menu-text"><i class="icon-cross"></i></span> -->
                         </li>
@@ -35,11 +35,20 @@
                             <i class="icon-profile"></i>
                             <span class="menu-text">Resume</span>
                         </li>
+                        <li id="js-btn-game" class="menu-item">
+                            <i class="icon-gamepad"></i>
+                            <span class="menu-text">Game</span>
+                        </li>
                         <li id="js-btn-contact" class="menu-item">
                             <i class="icon-phone"></i>
                             <span class="menu-text">Contact</span>
-
                         </li>
+                    </ul>
+                    <ul class="menu__foot">
+                        <li class="menu__foot-item"><a href="#" class="menu-link"><i class="icon-envelop"></i></a></li>
+                        <li class="menu__foot-item"><a href="#" class="menu-link"><i class="icon-instagram"></i></a></li>
+                        <li class="menu__foot-item"><a href="#" class="menu-link"><i class="icon-facebook"></i></a></li>
+                        <li class="menu__foot-item"><a href="#" class="menu-link"><i class="icon-github"></i></a></li>
                     </ul>
                 </aside>
             </div>
@@ -60,9 +69,9 @@
                 <p class="heading">Resume</p>
             </div>
         </div>
-        <div class="col-s-12" id="js-swing">
+        <div class="col-s-12" id="js-game">
             <div class="content">
-                <p class="heading">Swing By</p>
+                <p class="heading">Game</p>
             </div>
         </div>
         <div class="col-s-12" id="js-contact">
