Update menu social

--- a/index.html
+++ b/index.html
@@ -44,13 +44,15 @@
                             <span class="menu-text">Contact</span>
                         </li>
                     </ul>
-                    <ul class="menu__foot">
-                        <li class="menu__foot-item"><a href="#" class="menu-link"><i class="icon-envelop"></i></a></li>
-                        <li class="menu__foot-item"><a href="#" class="menu-link"><i class="icon-instagram"></i></a></li>
-                        <li class="menu__foot-item"><a href="#" class="menu-link"><i class="icon-facebook"></i></a></li>
-                        <li class="menu__foot-item"><a href="#" class="menu-link"><i class="icon-github"></i></a></li>
-                    </ul>
                 </aside>
+                <ul class="menu__foot" id="js-menu-foot">
+                    <li class="menu__foot-item">
+                        <a href="mal" class="menu-link"><i class="icon-envelop"></i></a>
+                    </li>
+                    <li class="menu__foot-item"><a href="#" class="menu-link"><i class="icon-instagram"></i></a></li>
+                    <li class="menu__foot-item"><a href="#" class="menu-link"><i class="icon-facebook"></i></a></li>
+                    <li class="menu__foot-item"><a href="#" class="menu-link"><i class="icon-github"></i></a></li>
+                </ul>
             </div>
         </div>
         <div class="col-s-12" id="js-aboutme">
@@ -82,7 +84,7 @@
     </section>
     <footer class="footer">
         <!-- <a href="http://fb.com/truongezgg" class="footer__link" target="_blank" title="Trang facebook cá nhân">http://fb.com/truongezgg</a> -->
-        <p>Coppyright by Nguyễn Duy Trường</p>
+        <p>Coppyright by Nguyễn Duy Trường ver1.0</p>
     </footer>
     <script src="JS/main.js"></script>
 </body>
