Update url link social

--- a/index.html
+++ b/index.html
@@ -47,11 +47,17 @@
                 </aside>
                 <ul class="menu__foot" id="js-menu-foot">
                     <li class="menu__foot-item">
-                        <a href="mal" class="menu-link"><i class="icon-envelop"></i></a>
+                        <a href="mailto:truongezgg@gmail.com?Subject=Hello%20Truong!" target="_blank" title="Send email to me." class="menu-link"><i class="icon-envelop"></i></a>
                     </li>
-                    <li class="menu__foot-item"><a href="#" class="menu-link"><i class="icon-instagram"></i></a></li>
-                    <li class="menu__foot-item"><a href="#" class="menu-link"><i class="icon-facebook"></i></a></li>
-                    <li class="menu__foot-item"><a href="#" class="menu-link"><i class="icon-github"></i></a></li>
+                    <li class="menu__foot-item">
+                        <a href="https://www.instagram.com/_duytruong/" target="_blank" title="Instagram" class="menu-link"><i class="icon-instagram"></i></a>
+                    </li>
+                    <li class="menu__foot-item">
+                        <a href="https://fb.com/truongezgg" target="_blank" title="Facebook" class="menu-link"><i class="icon-facebook"></i></a>
+                    </li>
+                    <li class="menu__foot-item">
+                        <a href="https://github.com/NguyenDuyTruong1998" target="_blank" title="Github" class="menu-link"><i class="icon-github"></i></a>
+                    </li>
                 </ul>
             </div>
         </div>
