Add animate btn toggle menu

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             <div class="content">
                 <aside class="header__menu">
                     <ul class="menu">
+                        <input type="checkbox" name="btn-menu" id="btn-menu" hidden checked>
                         <li id="js-toggle-menu" title='show/hide' class="menu-item">
-                            <i class="icon-menu"></i>
+                            <label for="btn-menu" class="label-icon"><i class="icon-menu" id='icon-menu'></i></label>
                             <!-- <span class="menu-text"><i class="icon-cross"></i></span> -->
                         </li>
                         <li id="js-btn-about-me" class="menu-item">
