Update more animate & aboutme

--- a/index.html
+++ b/index.html
@@ -63,8 +63,11 @@
             </div>
         </div>
         <div class="col-s-12" id="js-aboutme">
+            <p class="heading">About Me</p>
             <div class="content">
-                <p class="heading">About Me</p>
+                <a href="./images/avt-aboutme2.jpg" target="_blank" rel="noopener noreferrer">
+                    <img src="./images/avt-aboutme2.jpg" alt="avt" class="img-avt">
+                </a>
             </div>
             
         </div>
