--- a/index.html
+++ b/index.html
@@ -16,57 +16,56 @@
     <section class="wrapper row">
         <div class="col-s-12" id="js-header">
             <div class="bg-image"></div>
-            <div class="content">
-                <aside class="header__menu">
-                    <ul class="menu">
-                        <li id="js-toggle-menu" title='show/hide' class="menu-item">
-                            <i class="icon-menu" id='icon-menu'></i>
-                            <!-- <span class="menu-text"><i class="icon-cross"></i></span> -->
-                        </li>
-                        <li id="js-btn-about-me" class="menu-item">
-                            <i class="icon-home3"></i>
-                            <span class="menu-text">Home</span>
-                        </li>
-                        <li id="js-btn-my-work" class="menu-item">
-                            <i class="icon-briefcase"></i>
-                            <span class="menu-text">My work</span>
-                        </li>
-                        <li id="js-btn-resume" class="menu-item">
-                            <i class="icon-profile"></i>
-                            <span class="menu-text">Resume</span>
-                        </li>
-                        <li id="js-btn-game" class="menu-item">
-                            <i class="icon-gamepad"></i>
-                            <span class="menu-text">Game</span>
-                        </li>
-                        <li id="js-btn-contact" class="menu-item">
-                            <i class="icon-phone"></i>
-                            <span class="menu-text">Contact</span>
-                        </li>
-                    </ul>
-                </aside>
-                <ul class="menu__foot" id="js-menu-foot">
-                    <li class="menu__foot-item">
-                        <a href="mailto:truongezgg@gmail.com?Subject=Hello%20Truong!" target="_blank" title="Send email to me." class="menu-link"><i class="icon-envelop"></i></a>
+            <aside class="header__menu">
+                <ul class="menu">
+                    <li id="js-toggle-menu" title='show/hide' class="menu-item">
+                        <i class="icon-menu" id='icon-menu'></i>
+                        <!-- <span class="menu-text"><i class="icon-cross"></i></span> -->
                     </li>
-                    <li class="menu__foot-item">
-                        <a href="https://www.instagram.com/_duytruong/" target="_blank" title="Instagram" class="menu-link"><i class="icon-instagram"></i></a>
+                    <li id="js-btn-about-me" class="menu-item active">
+                        <i class="icon-home3"></i>
+                        <span class="menu-text">Home</span>
                     </li>
-                    <li class="menu__foot-item">
-                        <a href="https://fb.com/truongezgg" target="_blank" title="Facebook" class="menu-link"><i class="icon-facebook"></i></a>
+                    <li id="js-btn-my-work" class="menu-item">
+                        <i class="icon-briefcase"></i>
+                        <span class="menu-text">My work</span>
                     </li>
-                    <li class="menu__foot-item">
-                        <a href="https://github.com/NguyenDuyTruong1998" target="_blank" title="Github" class="menu-link"><i class="icon-github"></i></a>
+                    <li id="js-btn-resume" class="menu-item">
+                        <i class="icon-profile"></i>
+                        <span class="menu-text">Resume</span>
+                    </li>
+                    <li id="js-btn-game" class="menu-item">
+                        <i class="icon-gamepad"></i>
+                        <span class="menu-text">Game</span>
+                    </li>
+                    <li id="js-btn-contact" class="menu-item">
+                        <i class="icon-phone"></i>
+                        <span class="menu-text">Contact</span>
                     </li>
                 </ul>
-            </div>
+            </aside>
+            <ul class="menu__foot" id="js-menu-foot">
+                <li class="menu__foot-item">
+                    <a href="mailto:truongezgg@gmail.com?Subject=Hello%20Truong!" target="_blank" title="Send email to me." class="menu-link"><i class="icon-envelop"></i></a>
+                </li>
+                <li class="menu__foot-item">
+                    <a href="https://www.instagram.com/_duytruong/" target="_blank" title="Instagram" class="menu-link"><i class="icon-instagram"></i></a>
+                </li>
+                <li class="menu__foot-item">
+                    <a href="https://fb.com/truongezgg" target="_blank" title="Facebook" class="menu-link"><i class="icon-facebook"></i></a>
+                </li>
+                <li class="menu__foot-item">
+                    <a href="https://github.com/NguyenDuyTruong1998" target="_blank" title="Github" class="menu-link"><i class="icon-github"></i></a>
+                </li>
+            </ul>
         </div>
         <div class="col-s-12" id="js-aboutme">
             <p class="heading">About Me</p>
             <div class="content">
-                <a href="./images/avt-aboutme2.jpg" target="_blank" rel="noopener noreferrer">
-                    <img src="./images/avt-aboutme2.jpg" alt="avt" class="img-avt">
+                <a href="./images/avt-aboutme2.webp" target="_blank" class="img-avt" rel="noopener noreferrer">
+                    <img src="./images/avt-aboutme2.webp" alt="avt" width="100%" height="100%">
                 </a>
+                <p>Sinh viên công nghệ thông tin</p>
             </div>
             
         </div>
