--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 <ul class="menu">
                     <li id="js-toggle-menu" title='show/hide' class="menu-item">
                         <i class="icon-menu" id='icon-menu'></i>
-                        <!-- <span class="menu-text"><i class="icon-cross"></i></span> -->
                     </li>
                     <li id="js-btn-about-me" class="menu-item active">
                         <i class="icon-home3"></i>
@@ -60,12 +59,37 @@
             </ul>
         </div>
         <div class="col-s-12" id="js-aboutme">
-            <p class="heading">About Me</p>
             <div class="content">
                 <a href="./images/avt-aboutme2.webp" target="_blank" class="img-avt" rel="noopener noreferrer">
                     <img src="./images/avt-aboutme2.webp" alt="avt" width="100%" height="100%">
                 </a>
-                <p>Sinh viên công nghệ thông tin</p>
+                <br>
+                <p class="heading">About me</p>
+                <p class="about__details">
+                    <span class="text-light">22 years</span> / <span class="text-light">Hà Nội</span> / <span class="text-light">Student</span>
+                </p>
+                <p>
+                    I want to be a Full-Stack Developer with my passion for programming & technology. 
+                    I have basic knowledge of PHP, JavaScript, HTML and CSS. 
+                    With my knowledge, I have implemented some interesting projects in 2019.
+                    This year, i will try my best to be a Genuine Programmer. :)
+                </p>
+                <div class="aboutme__projects row">
+                    <div class="col-s-6">
+                        <div class="projects-item">Bricklaying game - JavaScript.</div>
+                    </div>
+                    <div class="col-s-6">
+                        <div class="projects-item">Multiple choice test on computer - PHP.</div>
+                    </div>
+                    <div class="col-s-6">
+                        <div class="projects-item">News - PHP.</div>
+                    </div>
+                    <div class="col-s-6">
+                        <div class="projects-item">Snake game - JavaScript.</div>
+                    </div>
+                </div>
+                <a href="https://github.com/NguyenDuyTruong1998">View more on github</a>
+                
             </div>
             
         </div>
@@ -92,7 +116,7 @@
     </section>
     <footer class="footer">
         <!-- <a href="http://fb.com/truongezgg" class="footer__link" target="_blank" title="Trang facebook cá nhân">http://fb.com/truongezgg</a> -->
-        <p>Coppyright by Nguyễn Duy Trường ver1.0</p>
+        <p>Coppyright © 2020 Powered by Nguyễn Duy Trường ver1.0</p>
     </footer>
     <script src="JS/main.js"></script>
 </body >
