Update aboutme (Projects)

--- a/index.html
+++ b/index.html
@@ -74,21 +74,23 @@
                     With my knowledge, I have implemented some interesting projects in 2019.
                     This year, i will try my best to be a Genuine Programmer. :)
                 </p>
-                <div class="aboutme__projects row">
-                    <div class="col-s-6">
-                        <div class="projects-item">Bricklaying game - JavaScript.</div>
-                    </div>
-                    <div class="col-s-6">
-                        <div class="projects-item">Multiple choice test on computer - PHP.</div>
-                    </div>
-                    <div class="col-s-6">
-                        <div class="projects-item">News - PHP.</div>
-                    </div>
-                    <div class="col-s-6">
-                        <div class="projects-item">Snake game - JavaScript.</div>
-                    </div>
-                </div>
-                <a href="https://github.com/NguyenDuyTruong1998">View more on github</a>
+                <br>
+                <h2>Made by me</h2>
+                <ul class="aboutme__projects">
+                    <li class="projects-item">
+                        <a href="#">Bricklaying game - JavaScript.</a>
+                    </li>
+                    <li class="projects-item">
+                        <a href="#">Snake game - JavaScript.</a>
+                    </li>
+                    <li class="projects-item">
+                        <a href="#">Website multiple choice test on computer - PHP.</a>
+                    </li>
+                    <li class="projects-item">
+                        <a href="#">Website News - PHP.</a>
+                    </li>
+                </ul>
+                <a href="https://github.com/NguyenDuyTruong1998"><small>>>View more on github</small></a>
                 
             </div>
             
