Add scroll bar & My work

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     This year, i will try my best to be a Genuine Programmer. :)
                 </p>
                 <br>
-                <h2>Made by me</h2>
+                <h2>Some of my latest projects.</h2>
                 <ul class="aboutme__projects">
                     <li class="projects-item">
                         <a href="#">Bricklaying game - JavaScript.</a>
@@ -97,7 +97,43 @@
         </div>
         <div class="col-s-12" id="js-mywork">
             <div class="content">
-                <p class="heading">My Work</p>
+                <p class="heading">My projects</p>
+                <ul class="mywork__projects row">
+                    <li class="col-12">JavaScript</li>
+                    <li class="row">
+                        <div class="col-s-6">
+                            <div class="square">
+                                <img src="./images/bricklaying.webp">
+                                <a class="title" href="#">Bricklaying game - JavaScript.</a class="title">
+                            </div>
+                        </div>
+                        <div class="col-s-6">
+                            <div class="square">
+                                <img src="./images/Snake2.webp">
+                                <a class="title" href="#">Snake game - JavaScript.</a>
+                            </div>
+                        </div>
+                        <div class="col-s-6">
+                            <div class="square">
+                                <img src="./images/Caculate.webp" width="100%" height="150px" alt="">
+                                <a class="title" href="#">Caculator - JavaScript.</a>
+                            </div>
+                        </div>
+                        <div class="col-s-6">
+                            <div class="square">
+                                <img src="./images/gamexo.png" width="100%" height="150px" alt="">
+                                <a class="title" href="#">Game XO - JavaScript.</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="col-12">PHP</li>
+                    <li class="row">
+                        <div class="col-s-6">1</div>
+                        <div class="col-s-6">2</div>
+                        <div class="col-s-6">3</div>
+                        <div class="col-s-6">4</div>
+                    </li>
+                </ul>
             </div>
         </div>
         <div class="col-s-12" id="js-resume">
