--- a/index.html
+++ b/index.html
@@ -101,37 +101,57 @@
                 <ul class="mywork__projects row">
                     <li class="col-12">JavaScript</li>
                     <li class="row">
-                        <div class="col-s-6">
-                            <div class="square">
+                        <div class="col-4 col-s-6">
+                            <a  class="square" href="#">
                                 <img src="./images/bricklaying.webp">
-                                <a class="title" href="#">Bricklaying game - JavaScript.</a class="title">
-                            </div>
+                                <p class="title">Bricklaying game - JavaScript.</p>
+                            </a>
                         </div>
-                        <div class="col-s-6">
-                            <div class="square">
+                        <div class="col-4 col-s-6">
+                            <a class="square" href="#">
                                 <img src="./images/Snake2.webp">
-                                <a class="title" href="#">Snake game - JavaScript.</a>
-                            </div>
+                                <p class="title">Snake game - JavaScript.</p>
+                            </a>
                         </div>
-                        <div class="col-s-6">
-                            <div class="square">
-                                <img src="./images/Caculate.webp" width="100%" height="150px" alt="">
-                                <a class="title" href="#">Caculator - JavaScript.</a>
-                            </div>
+                        <div class="col-4 col-s-6">
+                            <a class="square" href="#">
+                                <img src="./images/Caculate.webp">
+                                <p class="title">Caculator - JavaScript.</p>
+                            </a>
                         </div>
-                        <div class="col-s-6">
-                            <div class="square">
-                                <img src="./images/gamexo.png" width="100%" height="150px" alt="">
-                                <a class="title" href="#">Game XO - JavaScript.</a>
-                            </div>
+                        <div class="col-4 col-s-6">
+                            <a class="square" href="#">
+                                <img src="./images/gamexo.png">
+                                <p class="title">Game XO - JavaScript.</p>
+                            </a>
                         </div>
                     </li>
                     <li class="col-12">PHP</li>
                     <li class="row">
-                        <div class="col-s-6">1</div>
-                        <div class="col-s-6">2</div>
-                        <div class="col-s-6">3</div>
-                        <div class="col-s-6">4</div>
+                        <div class="col-4 col-s-6">
+                            <a class="square" href="#">
+                                <img src="./images/webtracnghiem.webp">
+                                <p class="title">Website multiple choice test on computer - PHP.</p>
+                            </a>
+                        </div>
+                        <div class="col-4 col-s-6">
+                            <a class="square" href="#">
+                                <img src="./images/webtracnghiem.webp">
+                                <p class="title">Website multiple choice test on computer - PHP.</p>
+                            </a>
+                        </div>
+                        <div class="col-4 col-s-6">
+                            <a class="square" href="#">
+                                <img src="./images/webtracnghiem.webp">
+                                <p class="title">Website multiple choice test on computer - PHP.</p>
+                            </a>
+                        </div>
+                        <div class="col-4 col-s-6">
+                            <a class="square" href="#">
+                                <img src="./images/webtracnghiem.webp">
+                                <p class="title">Website multiple choice test on computer - PHP.</p>
+                            </a>
+                        </div>
                     </li>
                 </ul>
             </div>
