Add resume & demo game

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h2>Some of my latest projects.</h2>
                 <ul class="aboutme__projects">
                     <li class="projects-item">
-                        <a href="#">Bricklaying game - JavaScript.</a>
+                        <a href="http://truongezgg.tk/Game/gameBrick/xepgach.html">Bricklaying game - JavaScript.</a>
                     </li>
                     <li class="projects-item">
                         <a href="#">Snake game - JavaScript.</a>
@@ -102,25 +102,25 @@
                     <li class="col-12">JavaScript</li>
                     <li class="row">
                         <div class="col-4 col-s-6">
-                            <a  class="square" href="#">
+                            <a  class="square" href="./Game/gameBrick/xepgach.html">
                                 <img src="./images/bricklaying.webp">
                                 <p class="title">Bricklaying game - JavaScript.</p>
                             </a>
                         </div>
                         <div class="col-4 col-s-6">
-                            <a class="square" href="#">
+                            <a class="square" href="./Game/snake/snake.html">
                                 <img src="./images/Snake2.webp">
                                 <p class="title">Snake game - JavaScript.</p>
                             </a>
                         </div>
                         <div class="col-4 col-s-6">
-                            <a class="square" href="#">
+                            <a class="square" href="./Game/Caculator/index.html">
                                 <img src="./images/Caculate.webp">
                                 <p class="title">Caculator - JavaScript.</p>
                             </a>
                         </div>
                         <div class="col-4 col-s-6">
-                            <a class="square" href="#">
+                            <a class="square" href="./Game/GameXO/gamexo.html">
                                 <img src="./images/gamexo.png">
                                 <p class="title">Game XO - JavaScript.</p>
                             </a>
@@ -129,27 +129,21 @@
                     <li class="col-12">PHP</li>
                     <li class="row">
                         <div class="col-4 col-s-6">
-                            <a class="square" href="#">
+                            <a class="square" href="https://github.com/NguyenDuyTruong1998/WEBTRACNGIEMMAYTINH">
                                 <img src="./images/webtracnghiem.webp">
                                 <p class="title">Website multiple choice test on computer - PHP.</p>
                             </a>
                         </div>
                         <div class="col-4 col-s-6">
                             <a class="square" href="#">
-                                <img src="./images/webtracnghiem.webp">
-                                <p class="title">Website multiple choice test on computer - PHP.</p>
+                                <img src="./images/webbanhang.webp">
+                                <p class="title">Website Sale Food - PHP.</p>
                             </a>
                         </div>
                         <div class="col-4 col-s-6">
-                            <a class="square" href="#">
+                            <a class="square" href="https://github.com/NguyenDuyTruong1998/WebTinTuc">
                                 <img src="./images/webtracnghiem.webp">
-                                <p class="title">Website multiple choice test on computer - PHP.</p>
-                            </a>
-                        </div>
-                        <div class="col-4 col-s-6">
-                            <a class="square" href="#">
-                                <img src="./images/webtracnghiem.webp">
-                                <p class="title">Website multiple choice test on computer - PHP.</p>
+                                <p class="title">Website News - PHP.</p>
                             </a>
                         </div>
                     </li>
@@ -159,6 +153,102 @@
         <div class="col-s-12" id="js-resume">
             <div class="content">
                 <p class="heading">Resume</p>
+                <p>A draft from my CV</p>
+                <!-- time line -->
+                <div class="resume__time-line">
+                    <div class="resume__item">
+                        <div class="resume__item-left">2020</div>
+                        <div class="resume__item-colum">
+                            <div class="resume__circle"></div>
+                            <div class="resume__line"></div>
+                        </div>
+                        <div class="resume__item-right">
+                        </div>
+                    </div>
+
+                    <div class="resume__item resume__item--small">
+                        <div class="resume__item-left">Dec 2019</div>
+                        <div class="resume__item-colum resume__item-colum--small">
+                            <div class="resume__circle"></div>
+                            <div class="resume__line"></div>
+                        </div>
+                        <div class="resume__item-right">
+                            <p>Trainee at VNPT Thanh Hoa.</p>
+                            <small>From Dec 16, 2019 to Jan 19, 2020.</small>
+                        </div>
+                    </div>
+
+                    <div class="resume__item resume__item--small">
+                        <div class="resume__item-left">Jun 2019</div>
+                        <div class="resume__item-colum resume__item-colum--small">
+                            <div class="resume__circle"></div>
+                            <div class="resume__line"></div>
+                        </div>
+                        <div class="resume__item-right">
+                            <p>Participate in a student research project.</p>
+                            <small>Research Mapple software - Graded fairly.</small>
+                        </div>
+                    </div>
+
+                    <div class="resume__item resume__item--small">
+                        <div class="resume__item-left">Jun 2019</div>
+                        <div class="resume__item-colum resume__item-colum--small">
+                            <div class="resume__circle"></div>
+                            <div class="resume__line"></div>
+                        </div>
+                        <div class="resume__item-right">
+                            <p>Complete some projects with Javascript.</p>
+                            <small>BrickLaying, snake, caculator, caro...</small>
+                        </div>
+                    </div>
+
+                    <div class="resume__item resume__item--small">
+                        <div class="resume__item-left">Aug 2018</div>
+                        <div class="resume__item-colum resume__item-colum--small">
+                            <div class="resume__circle"></div>
+                            <div class="resume__line"></div>
+                        </div>
+                        <div class="resume__item-right">
+                            <p>Complete the first project.</p>
+                            <small>Website Sale Food(Front-End).</small>
+                        </div>
+                    </div>
+
+                    <div class="resume__item">
+                        <div class="resume__item-left">Sep 2016</div>
+                        <div class="resume__item-colum">
+                            <div class="resume__circle"></div>
+                            <div class="resume__line"></div>
+                        </div>
+                        <div class="resume__item-right">
+                            <p>Started studying at UNIVERSITY OF ECONOMICS - TECHNOLOGY FOR INDUSTRIES(UNETI).</p>
+                            <small>From 2016 to 2020</small><br>
+                            <small>218 Linh Nam - Hoang Mai - Ha Noi</small>
+                        </div>
+                    </div>
+                    <div class="resume__item">
+                        <div class="resume__item-left">May 2013</div>
+                        <div class="resume__item-colum">
+                            <div class="resume__circle"></div>
+                            <div class="resume__line"></div>
+                        </div>
+                        <div class="resume__item-right">
+                            <p>Graduated from Le Hoan High School.</p>
+                            <small>Tho Xuan - Thanh Hoa</small>
+                        </div>
+                    </div>
+                    <div class="resume__item">
+                        <div class="resume__item-left">May 14, 1998</div>
+                        <div class="resume__item-colum">
+                            <div class="resume__circle"></div>
+                            <div class="resume__line"></div>
+                        </div>
+                        <div class="resume__item-right">
+                            <p>Date of birth</p>
+                            <small>Tho Xuan - Thanh Hoa</small>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-s-12" id="js-game">
