--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
     </footer>
     <script src="JS/main.js"></script>
     <script>
-        window.onload = () => {
+        window.addEventListener('load', () => {
             const loader = document.querySelector('.loader');
             loader.className += ' hidden';
-        }
+        });
     </script>
 </body >
 </html>
