--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@
     </footer>
     <script src="JS/main.js"></script>
     <script>
-        window.addEventListener('load', () => {
+        window.addEventListener('load', function() {
             const loader = document.querySelector('.loader');
-            loader.className += ' hidden';
+            loader.className += ' loader--hidden';
         });
     </script>
 </body >
