--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Truongezgg comming soon</title>
 </head>
 <body>
-    <div class="loader loader--hidden">
+    <div class="loader">
         <img src="./images/loading.gif" alt="Loading...">
     </div>
     <section class="wrapper row">
