--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </li>
                     <li id="js-btn-my-work" class="menu-item">
                         <i class="icon-briefcase"></i>
-                        <span class="menu-text">My work</span>
+                        <span class="menu-text">My projects</span>
                     </li>
                     <li id="js-btn-resume" class="menu-item">
                         <i class="icon-profile"></i>
@@ -78,7 +78,42 @@
                     This year, i will try my best to be a Genuine Programmer. :)
                 </p>
                 <br>
-                <h2>Some of my latest projects.</h2>
+                <h1>Skills:</h1>
+                <div class="about__skills">
+                    <div class="about__html">
+                        <small>HTML</small>
+                        <div class="about__skill__container">
+                            <div class="about__html__process">60%</div>
+                        </div>
+                    </div>
+                    <div class="about__css">
+                        <small>CSS</small>
+                        <div class="about__skill__container">
+                            <div class="about__css__process">50%</div>
+                        </div>
+                    </div>
+                    <div class="about__javascript">
+                        <small>JavaScript</small>
+                        <div class="about__skill__container">
+                            <div class="about__javascript__process">40%</div>
+                        </div>
+                    </div>
+                    <div class="about__javascript">
+                        <small>PHP</small>
+                        <div class="about__skill__container">
+                            <div class="about__php__process">30%</div>
+                        </div>
+                    </div>
+                    <div class="about__english">
+                        <small>English</small>
+                        <div class="about__skill__container">
+                            <div class="about__english__process">30%</div>
+                        </div>
+                    </div>
+                </div>
+
+                <br>
+                <h2>Some of my latest projects:</h2>
                 <ul class="aboutme__projects">
                     <li class="projects-item">
                         <a href="http://truongezgg.tk/Game/gameBrick/xepgach.html">Bricklaying game - JavaScript.</a>
@@ -256,12 +291,18 @@
         </div>
         <div class="col-s-12" id="js-game">
             <div class="content">
-                <p class="heading">Game</p>
+                <p class="heading">Skill</p>
+                <small>Comming soon...</small>
             </div>
         </div>
         <div class="col-s-12" id="js-contact">
             <div class="content">
                 <p class="heading">Contact</p>
+                <br>
+                <p>Get in touch</p>
+                <div class="contact__body">
+                    <div class="contact__tel">+84 335 309 793</div>
+                </div>
             </div>
         </div>
     </section>
