add icon and contact

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </li>
                     <li id="js-btn-my-work" class="menu-item">
                         <i class="icon-briefcase"></i>
-                        <span class="menu-text">My projects</span>
+                        <span class="menu-text">Projects</span>
                     </li>
                     <li id="js-btn-resume" class="menu-item">
                         <i class="icon-profile"></i>
@@ -178,12 +178,6 @@
                                 <p class="title">Website Sale Food - PHP.</p>
                             </a>
                         </div>
-                        <div class="col-4 col-s-6">
-                            <a class="square" href="https://github.com/NguyenDuyTruong1998/WebTinTuc">
-                                <img src="./images/webtracnghiem.webp">
-                                <p class="title">Website News - PHP.</p>
-                            </a>
-                        </div>
                     </li>
                 </ul>
             </div>
@@ -212,7 +206,7 @@
                         </div>
                         <div class="resume__item-right">
                             <p>Trainee at VNPT Thanh Hoa.</p>
-                            <small>From Dec 16, 2019 to Jan 19, 2020.</small>
+                            <small><i class="icon-clock"></i> From Dec 16, 2019 to Jan 19, 2020.</small>
                         </div>
                     </div>
 
@@ -261,7 +255,7 @@
                         <div class="resume__item-right">
                             <p>Started studying at UNIVERSITY OF ECONOMICS - TECHNOLOGY FOR INDUSTRIES(UNETI).</p>
                             <small>From 2016 to 2020</small><br>
-                            <small>218 Linh Nam - Hoang Mai - Ha Noi</small>
+                            <small><i class="icon-location2"></i> 218 Linh Nam - Hoang Mai - Ha Noi</small>
                         </div>
                     </div>
                     <div class="resume__item">
@@ -272,7 +266,7 @@
                         </div>
                         <div class="resume__item-right">
                             <p>Graduated from Le Hoan High School.</p>
-                            <small>Tho Xuan - Thanh Hoa</small>
+                            <small><i class="icon-location2"></i> Tho Xuan - Thanh Hoa</small>
                         </div>
                     </div>
                     <div class="resume__item">
@@ -283,7 +277,7 @@
                         </div>
                         <div class="resume__item-right">
                             <p>Date of birth</p>
-                            <small>Tho Xuan - Thanh Hoa</small>
+                            <small><i class="icon-location2"></i> Tho Xuan - Thanh Hoa</small>
                         </div>
                     </div>
                 </div>
@@ -298,10 +292,12 @@
         <div class="col-s-12" id="js-contact">
             <div class="content">
                 <p class="heading">Contact</p>
-                <br>
-                <p>Get in touch</p>
                 <div class="contact__body">
-                    <div class="contact__tel">+84 335 309 793</div>
+                    <p>..for a cup of coffee, or whatever.</p>
+                    <br>
+                    <div class="contact__location"><i class="icon-location2"></i> Hoang Mai, Ha Noi, Viet Nam.</div>
+                    <div class="contact__tel"><i class="icon-phone"></i> Tel: +84 335 309 793</div>
+                    <div class="contact__email"><i class="icon-envelop"></i> Email: truongezgg@gmail.com</div>
                 </div>
             </div>
         </div>
