--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
                         <a href="http://truongezgg.tk/Game/gameBrick/xepgach.html">Bricklaying game - JavaScript.</a>
                     </li>
                     <li class="projects-item">
-                        <a href="#">Snake game - JavaScript.</a>
+                        <a href="https://github.com/NguyenDuyTruong1998/myProjects/tree/master/JavaScript/SnakeWithCanvas">Snake game - JavaScript.</a>
                     </li>
                     <li class="projects-item">
-                        <a href="#">Website multiple choice test on computer - PHP.</a>
+                        <a href="https://github.com/NguyenDuyTruong1998/WEBTRACNGIEMMAYTINH">Website multiple choice test on computer - PHP.</a>
                     </li>
                     <li class="projects-item">
-                        <a href="#">Website News - PHP.</a>
+                        <a href="https://github.com/NguyenDuyTruong1998/myProjects/tree/master/JavaScript/GameXO">Game X-O - JavaScript.</a>
                     </li>
                 </ul>
                 <a href="https://github.com/NguyenDuyTruong1998"><small>>>View more on github</small></a>
