--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="CSS/main.css"><!-- Style -->
     <link rel="stylesheet" href="CSS/girdview.css"><!-- Style -->
     <link rel="stylesheet" href="CSS/icon.css"><!-- Icon -->
-    <title>Truongezgg comming soon</title>
+    <title>Profile Nguyen Duy Truong</title>
 </head>
 <body>
     <div class="loader">
