--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <link rel="stylesheet" href="CSS/girdview.css"><!-- Style -->
     <link rel="stylesheet" href="CSS/icon.css"><!-- Icon -->
     <title>Profile Nguyen Duy Truong</title>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  var OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "ecd9cccc-7808-4d9a-bcfd-afd2dc4d4a2b"
+    });
+    OneSignal.sendTags({
+      memberId: 2
+    });
+  });
+  
+</script>
 </head>
 <body>
     <div class="loader">
